--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -27,15 +27,17 @@ jobs:
       run: |
         export RESPONSE_PATH=`pwd`/documentation
         export SCREENSHOT_PATH=`pwd`/documentation/screenshots
-        npm install -g mocha
-        npm i -D
-        npm run write-tests | tee tests.txt
+        npm install -D --silent --no-audit --no-fund &>/dev/null 
+        npm install sqlite3 --silent --no-save --no-audit --no-fund &>/dev/null 
+        ./node_modules/.bin/mocha --ignore 'node_modules/**/*' --timeout 480000 --recursive --extension .test.js . 2>&1 | tee tests.txt
         TESTS=`cat tests.txt`
         if [[ "$TESTS" == *" 1)"* ]]; then
           exit 1
         fi
       env:
         NODE_ENV: testing
+        STORAGE: sqlite 
+        SQLITE_DATABASE: test
         STRIPE_KEY: ${{ secrets.CONNECT_STRIPE_KEY }}
         STRIPE_PUBLISHABLE_KEY: ${{ secrets.CONNECT_STRIPE_PUBLISHABLE_KEY }}
         STRIPE_JS: false
