--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -35,6 +35,7 @@ jobs:
           exit 1
         fi
       env:
+        LOG_LEVEL: 'info,error'
         NODE_ENV: testing
         STORAGE: sqlite 
         SQLITE_DATABASE: test
