--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -30,12 +30,7 @@ jobs:
         npm install -D --silent --no-audit --no-fund &>/dev/null 
         npm install sqlite3 --silent --no-save --no-audit --no-fund &>/dev/null 
         ./node_modules/.bin/mocha --ignore 'node_modules/**/*' --timeout 960000 --slow 960000 --recursive --extension .test.js . 2>&1 | tee tests.txt
-        TESTS=`cat tests.txt`
-        if [[ "$TESTS" == *" 1)"* ]]; then
-          exit 1
-        fi
       env:
-        LOG_LEVEL: 'info,error'
         NODE_ENV: testing
         STORAGE: sqlite 
         SQLITE_DATABASE: test
@@ -82,3 +77,9 @@ jobs:
         publish_dir: documentation
         keep_files: true
         publish_branch: master
+    - name: Pass or fail tets
+      run: |
+        TESTS=`cat tests.txt`
+        if [[ "$TESTS" == *" 1)"* ]]; then
+          exit 1
+        fi
