Disable tests on gitHub

--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -26,11 +26,17 @@ jobs:
       run: npm version patch
     - name: Run test suite
       run: |
-        export RESPONSE_PATH=`pwd`/documentation
-        export SCREENSHOT_PATH=`pwd`/documentation/screenshots
-        npm install -D --silent --no-audit --no-fund &>/dev/null 
-        npm install sqlite3 --silent --no-save --no-audit --no-fund &>/dev/null 
-        node --expose-gc --max-old-space-size=4096 ./node_modules/.bin/mocha --retries 2 --ignore 'node_modules/**/*' --timeout 960000 --slow 960000 --recursive --extension .test.js . 2>&1 | tee tests.txt
+        # ---------------------------------------------------------
+        # For some reason an error 143 is thrown at a random point 
+        # using Github Actions, so tests and asset generation is
+        # skipped and performed/committed locally for the Stripe
+        # modules and examples using Stripe.
+        # ---------------------------------------------------------
+        # export RESPONSE_PATH=`pwd`/documentation
+        # export SCREENSHOT_PATH=`pwd`/documentation/screenshots
+        # npm install -D --silent --no-audit --no-fund &>/dev/null 
+        # npm install sqlite3 --silent --no-save --no-audit --no-fund &>/dev/null 
+        # node --expose-gc --max-old-space-size=4096 ./node_modules/.bin/mocha --retries 2 --ignore 'node_modules/**/*' --timeout 960000 --slow 960000 --recursive --extension .test.js . 2>&1 | tee tests.txt
       env:
         NODE_ENV: testing
         STORAGE: sqlite 
@@ -68,14 +74,14 @@ jobs:
       with:
         token: ${{ secrets.NPM_TOKEN }}
         access: 'public'
-    - name: Publish documentation assets
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        external_repository: "layeredapps/layeredapps.github.io"
-        personal_token: ${{ secrets.DEPLOY_TOKEN }}
-        publish_dir: documentation
-        keep_files: true
-        publish_branch: main
+    # - name: Publish documentation assets
+    #   uses: peaceiris/actions-gh-pages@v3
+    #   with:
+    #     external_repository: "layeredapps/layeredapps.github.io"
+    #     personal_token: ${{ secrets.DEPLOY_TOKEN }}
+    #     publish_dir: documentation
+    #     keep_files: true
+    #     publish_branch: main
     - name: Pass or fail tests
       run: |
         TESTS=`cat tests.txt`
