Set generate txt files

--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -56,12 +56,9 @@ jobs:
       env:
         NODE_ENV: testing
         EXIT_ON_START: true
-        STRIPE_KEY: ${{ secrets.CONNECT_STRIPE_KEY }}
-        STRIPE_PUBLISHABLE_KEY: ${{ secrets.CONNECT_STRIPE_PUBLISHABLE_KEY }}
-        STRIPE_JS: false
-        CONNECT_WEBHOOK_ENDPOINT_SECRET: replaced-at-runtime
-        NGROK: true
-        TEST_SUITE_REUSABLE_WEBHOOK: true
+        GENERATE_SITEMAP_TXT: true
+        GENERATE_API_TXT: true
+        GENERATE_ENV_TXT: true
     - name: Publish to Github
       uses: stefanzweifel/git-auto-commit-action@v4.1.6
       with:
