--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -59,6 +59,8 @@ jobs:
         GENERATE_SITEMAP_TXT: true
         GENERATE_API_TXT: true
         GENERATE_ENV_TXT: true
+        STRIPE_KEY: ${{ secrets.CONNECT_STRIPE_KEY }}
+        STRIPE_PUBLISHABLE_KEY: ${{ secrets.CONNECT_STRIPE_PUBLISHABLE_KEY }}
     - name: Publish to Github
       uses: stefanzweifel/git-auto-commit-action@v4.1.6
       with:
