Skip regenerating webhook

--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -61,6 +61,7 @@ jobs:
         GENERATE_ENV_TXT: true
         STRIPE_KEY: ${{ secrets.CONNECT_STRIPE_KEY }}
         STRIPE_PUBLISHABLE_KEY: ${{ secrets.CONNECT_STRIPE_PUBLISHABLE_KEY }}
+        CONNECT_WEBHOOK_ENDPOINT_SECRET: replaced-at-runtime
     - name: Publish to Github
       uses: stefanzweifel/git-auto-commit-action@v4.1.6
       with:
