No default server scripts

--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
     "modules": [
       "@layeredapps/maxmind-geoip"
     ],
-    "server": [
-      "/src/server/stripe-connect/bind-stripekey.js"
-    ]
+    "server": []
   },
   "peerDependencies": {
     "@layeredapps/dashboard": "latest"
