--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -36,7 +36,7 @@ jobs:
         # export SCREENSHOT_PATH=`pwd`/documentation/screenshots
         npm install -D --silent --no-audit --no-fund &>/dev/null 
         npm install sqlite3 --silent --no-save --no-audit --no-fund &>/dev/null 
-        # node --expose-gc --max-old-space-size=4096 ./node_modules/.bin/mocha --retries 2 --ignore 'node_modules/**/*' --timeout 960000 --slow 960000 --recursive --extension .test.js . 2>&1 | tee tests.txt
+        node --expose-gc --max-old-space-size=4096 ./node_modules/.bin/mocha --retries 2 --ignore 'node_modules/**/*' --timeout 960000 --slow 960000 --recursive --extension .test.js . 2>&1 | tee tests.txt
       env:
         NODE_ENV: testing
         STORAGE: sqlite 
