--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -40,7 +40,7 @@ jobs:
       env:
         NODE_ENV: testing
         STORAGE: sqlite 
-        SQLITE_DATABASE: test
+        DATABASE: test
         STRIPE_KEY: ${{ secrets.CONNECT_STRIPE_KEY }}
         STRIPE_PUBLISHABLE_KEY: ${{ secrets.CONNECT_STRIPE_PUBLISHABLE_KEY }}
         STRIPE_JS: false
